NYS-184 adding padding for home event list to fix overlap

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-upcoming-events/nysenate-upcoming-events.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-upcoming-events/nysenate-upcoming-events.scss
@@ -273,7 +273,7 @@
           }
 
           &:last-child {
-            padding-bottom: 0;
+            padding-bottom: 25px;
           }
 
           > .view-grouping-header {
